AP_Eigen Eigen is a slim algebra library, which is also used by the PX4 flight stack. The current Implementation of AP_Math is not interface complete and lacks optimizations for ARM processors. Eigen will increase performance. The binary size will be increased by appr. ~3.5k with AP_Math still included. I estimeted runtime advantages between 30 % and 200 % on some i386 cpus and in VMs. Additionally, I included examples and a reference implementations on the example of the compass learning algorithms.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "modules/gbenchmark"]
 	path = modules/gbenchmark
 	url = git://github.com/google/benchmark.git
+[submodule "modules/eigen"]
+	path = modules/eigen
+	url = https://github.com/PX4/eigen
